syntax = "proto3";

package api.v1;
option go_package = "proto/api/v1;api_v1";

service Me {
    rpc Ping(PingRequest) returns (PingResponse);

    rpc GetMe(GetMeRequest) returns (GetMeResponse);

    rpc GetEmail(GetEmailRequest) returns (GetEmailResponse);

    rpc UpdateEmail(UpdateEmailRequest) returns (UpdateEmailResponse);

    rpc UpdateNotificationTimeSpan(UpdateNotificationTimeSpanRequest) returns (UpdateNotificationTimeSpanResponse);

//    rpc ListFollowingTeachers();
//    rpc CreateFollowingTeacher();
//    rpc DeleteFollowingTeacher();
}

message NotificationTimeSpan {
    int32 fromHour = 1;
    int32 fromMinute = 2;
    int32 toHour = 3;
    int32 toMinute = 4;
}

message PingRequest {}

message PingResponse {}

message GetMeRequest {}

message GetMeResponse {
    int32 userId = 1;
    string email = 2;
    repeated NotificationTimeSpan notificationTimeSpans = 3;
}

message GetEmailRequest {}

message GetEmailResponse {
    string email = 1;
}

message UpdateEmailRequest {
    string email = 1;
}

message UpdateEmailResponse {}

message UpdateNotificationTimeSpanRequest {
    repeated NotificationTimeSpan notificationTimeSpans = 1;
}

message UpdateNotificationTimeSpanResponse {}
